<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.thewickerbreaker.thetomeinquisitor.MainSearchActivity">

    <ImageView
        android:id="@+id/mainLogo"
        style="@style/mainHeaderLogo"
        android:contentDescription="@string/main_logo_description"/>

    <LinearLayout style="@style/mainSearchBG">

        <TextView
            android:id="@+id/searchTitle"
            style="@style/mainSearchTitle"
            android:text="@string/main_search_title" />

        <TextView
            android:id="@+id/byTextView"
            style="@style/mainSearchByText"
            android:layout_marginTop="16dp"
            android:text="@string/by" />

        <EditText
            android:id="@+id/searchField"
            style="@style/mainSearchField"
            android:hint="@string/yo_r_inquery" />

        <TextView
            android:id="@+id/searchText"
            style="@style/mainSearchText"
            android:layout_marginTop="20dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/find"
            style="@style/mainSearchFindButton"
            android:layout_marginTop="8dp"
            android:text="@string/find_button" />

        <!-- Loading indicator is only shown before the first load -->
        <ProgressBar
            android:id="@+id/progress"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="72dp"
            android:indeterminateTint="@color/redLeather"
            android:visibility="gone"
            tools:targetApi="lollipop" />
    </LinearLayout>
</LinearLayout>
