<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/selectedTome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pallet1D"
    android:isScrollContainer="true"
    android:orientation="vertical"
    tools:context="com.thewickerbreaker.thetomeinquisitor.SelectedTomeActivity">

    <ImageView
        android:id="@+id/mainLogo"
        style="@style/mainHeaderLogo"
        android:contentDescription="@string/main_logo_description" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/pageColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@color/pallet1L"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/coverImage"
                    style="@style/selectedCover"
                    android:contentDescription="@string/book_cover" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/selectedTitle"
                        style="@style/selectedTitle" />

                    <TextView
                        android:id="@+id/selectedSubtitle"
                        style="@style/selectedSubtitle" />

                    <TextView
                        android:id="@+id/selectedByLine"
                        style="@style/selectedByText"
                        android:text="@string/written_by" />

                    <TextView
                        android:id="@+id/selectedAuthor"
                        style="@style/selectedAuthor" />

                    <TextView
                        android:id="@+id/selectedPubDate"
                        style="@style/selectedPubDate" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:id="@+id/topDivideLine"
                style="@style/dividerLine" />

            <TextView
                android:id="@+id/descriptionHeader"
                style="@style/descriptionHeader"
                android:text="@string/description" />

            <TextView
                android:id="@+id/selectedDescription"
                style="@style/selectedDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="16dp">

                <TextView
                    android:id="@+id/genreHeader"
                    style="@style/smallHeader"
                    android:text="@string/genre" />

                <TextView
                    android:id="@+id/selectedGenre"
                    style="@style/smallInfo" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                android:paddingTop="4dp">

                <TextView
                    android:id="@+id/pageCountHeader"
                    style="@style/smallHeader"
                    android:text="@string/page_count" />

                <TextView
                    android:id="@+id/selectedPageCount"
                    style="@style/smallInfo" />

            </LinearLayout>

            <View
                android:id="@+id/bottomDivideLine"
                style="@style/dividerLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/downloadBtn"
                    style="@style/downloadBtn"
                    android:text="@string/download_your_freetome" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/searchLayout"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/wood">

        <EditText
            android:id="@+id/searchYetAgain"
            style="@style/innerSearchFeild"
            android:hint="@string/new_inquery" />

        <Button
            android:id="@+id/findYetAgain"
            style="@style/innerFindBtn"
            android:text="@string/find_button" />

    </LinearLayout>
</LinearLayout>
